--- a/app/src/main/res/layout/activity_sudoku_juego.xml
+++ b/app/src/main/res/layout/activity_sudoku_juego.xml
@@ -6,7 +6,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
+    <com.example.sudowku.SudokuBoardView
+        android:id="@+id/sudokuBoardView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/buttonsLayout"
+        android:layout_marginBottom="-1dp" />
+
     <GridLayout
+        android:id="@+id/buttonsLayout"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:rowCount="3"
