--- a/app/src/main/res/layout/activity_sudoku_juego.xml
+++ b/app/src/main/res/layout/activity_sudoku_juego.xml
@@ -5,9 +5,9 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".view.MainActivity">
 
-    <com.example.sudowku.SudokuBoardView
+    <com.example.sudowku.view.custom.SudokuBoardView
         android:id="@+id/sudokuBoardView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,63 +23,54 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true">
         <Button
-            android:id="@+id/oneButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1"
             android:layout_row="0"
             android:layout_column="0"/>
         <Button
-            android:id="@+id/twoButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2"
             android:layout_row="0"
             android:layout_column="1"/>
         <Button
-            android:id="@+id/threeButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="3"
             android:layout_row="0"
             android:layout_column="2"/>
         <Button
-            android:id="@+id/fourButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="4"
             android:layout_row="1"
             android:layout_column="0"/>
         <Button
-            android:id="@+id/fiveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="5"
             android:layout_row="1"
             android:layout_column="1"/>
         <Button
-            android:id="@+id/sixButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="6"
             android:layout_row="1"
             android:layout_column="2"/>
         <Button
-            android:id="@+id/sevenButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="7"
             android:layout_row="2"
             android:layout_column="0"/>
         <Button
-            android:id="@+id/eigthButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="8"
             android:layout_row="2"
             android:layout_column="1"/>
         <Button
-            android:id="@+id/nineButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="9"
